@@ -1,3 +1,9 @@
+2017-10-17  Allen D. Ball  <ball@sol>
+
+	* Replaced JSONBeanSerializer with JSONBeanSerializerModifier.
+	Moved JSONBean BeanDeserializerModifier implementation to
+	PolymorphicTypeMap.
+
 2017-09-16  Allen D. Ball  <ball@sol>
 
 	* src/main/java/ball/databind/JSONBeanSerializer.java:
